# src/controllers/patient_chief_complaints.js
@@ -7,12 +7,14 @@ const sequelizeDb = require('../config/sequelize');
 // Initialize EMR Workflow
 const patient_chief_complaints_tbl = sequelizeDb.patient_chief_complaints;
 const chief_complaints_tbl = sequelizeDb.chief_complaints;
+const chief_complaints_duration_tbl = sequelizeDb.chief_complaint_duration_periods;
 
 const emr_constants = require('../config/constants');
 
 function getPatientSearchQuery(searchKey, searchValue) {
 
     let searchObject;
+    searchKey = searchKey.toLowerCase();
     switch (searchKey) {
 
         case 'encounterId':
@@ -30,9 +32,13 @@ function getPatientSearchQuery(searchKey, searchValue) {
             is_active: emr_constants.IS_ACTIVE,
             status: emr_constants.IS_ACTIVE
         },
-        includes: [
+        include: [
             {
                 model: chief_complaints_tbl,
+                attributes: ['code', 'name']
+            },
+            {
+                model: chief_complaints_duration_tbl,
                 attributes: ['code', 'name']
             }
         ]
@@ -41,7 +47,11 @@ function getPatientSearchQuery(searchKey, searchValue) {
 
 const PatientChiefComplaints = () => {
 
-
+    /**
+     * 
+     * @param {*} req 
+     * @param {*} res 
+     */
     const _createChiefComplaints = async (req, res) => {
 
         const { user_uuid } = req.headers;
@@ -51,7 +61,7 @@ const PatientChiefComplaints = () => {
 
             chiefComplaintsData.forEach((cD) => {
                 cD.is_active = cD.status = emr_constants.is_active;
-                cD.created_date = cD.modified_date = cD.performed_date = new Date().toISOString();
+                cD.created_date = cD.modified_date = cD.performed_date = new Date();
                 cD.modified_by = cD.created_by = cD.performed_by = user_uuid;
             });
 
@@ -63,7 +73,7 @@ const PatientChiefComplaints = () => {
                 }
 
             } catch (ex) {
-                return res.status(200).send({ code: httpStatus.BAD_REQUEST, message: ex.message });
+                return res.status(400).send({ code: httpStatus.BAD_REQUEST, message: ex.message });
             }
 
         } else {
@@ -76,11 +86,28 @@ const PatientChiefComplaints = () => {
      * Key is - Patient Id and Encounter Id
      * Otherwise it return entire list
      */
-    const _getPatientChiefComplaints = () => {
+    const _getPatientChiefComplaints = async (req, res) => {
 
         const { searchKey, searchValue } = req.query;
 
-        const getPatientSearchQuery = '';
+        if (searchKey && searchValue) {
+            try {
+
+                const patChiefComplaintsData = await patient_chief_complaints_tbl.findAll(getPatientSearchQuery(searchKey, searchValue));
+                return res.status(200).send({ code: httpStatus.OK, message: "Fetched Patient Chief Complaints Successfully", responseContents: getPatientsChiefComplaintsInReadable(patChiefComplaintsData) });
+
+            } catch (ex) {
+
+                console.log(ex.message);
+                return res.status(400).send({ code: httpStatus.BAD_REQUEST, message: ex.message });
+
+            }
+        } else {
+            return res.status(400).send({ code: httpStatus[400], message: "No Request Param Found" });
+        }
+
+
+
     }
 
     return {
@@ -98,4 +125,30 @@ function attachUUIDTOCreatedData(reqData, createdData) {
     });
 
     return reqData;
+}
+
+function getPatientsChiefComplaintsInReadable(fetchedData) {
+    let patientChiefComplaints = [];
+    fetchedData.forEach((fD) => {
+        patientChiefComplaints = [...patientChiefComplaints,
+        {
+            patient_chief_id: fD.patient_uuid,
+            encounter_id: fD.encounter_uuid,
+            encounter_type_id: fD.encounter_type_uuid,
+            consulation_id: fD.consulation_uuid,
+            chief_complaint_id: fD.chief_complaint_uuid,
+            chief_complaint_name: fD.chief_complaint && fD.chief_complaint.name ? fD.chief_complaint.name : '',
+            chief_complaint_code: fD.chief_complaint && fD.chief_complaint.code ? fD.chief_complaint.code : '',
+            chief_complaint_duration_id: fD.chief_complaint_duration_period_uuid,
+            chief_complaint_duration_name: fD.chief_complaint_duration_period && fD.chief_complaint_duration_period.name ? fD.chief_complaint_duration_period.name : '',
+            chief_complaint_duration_code: fD.chief_complaint_duration_period && fD.chief_complaint_duration_period.code ? fD.chief_complaint_duration_period.code : '',
+            is_active: fD.is_active[0] === 1 ? true : false,
+            status: fD.status[0] === 1 ? true : false,
+            created_by: fD.created_by,
+            modified_by: fD.modified_by,
+            created_date: fD.created_date,
+            modified_date: fD.modified_date
+        }];
+    });
+    return patientChiefComplaints;
 }
