# src/routes/patient_chief_complaints.route.js
@@ -7,6 +7,7 @@ const PatientChiefComplaints = require('../controllers/patient_chief_complaints'
 // Express Router Initialize
 const PatientChiefCompRoutes = express.Router();
 
-PatientChiefCompRoutes.route('/create').post(PatientChiefComplaints.createChiefComplaints)
+PatientChiefCompRoutes.route('/create').post(PatientChiefComplaints.createChiefComplaints);
+PatientChiefCompRoutes.route('/getByFilters').get(PatientChiefComplaints.getPatientChiefComplaints);
 
 module.exports = PatientChiefCompRoutes;
